# HardCilk

./: Dockerfile  README.md  post-script.sh  run_evaluation.py
evaluation/HardCilk/simulations/: CMakeLists.txt  run_exp_all.py
evaluation/HardCilk/simulations/paper_exp1/: generate_bulk.py  run_exp.py
evaluation/HardCilk/simulations/paper_exp1/bulk/: factories.cpp
evaluation/HardCilk/simulations/paper_exp1/bulk/wrappers/: paper_exp1__peCount_16__vssNumber_6.hpp  paper_exp1__peCount_32__vssNumber_6.cpp  paper_exp1__peCount_32__vssNumber_6.hpp
evaluation/HardCilk/simulations/paper_exp1/hdl/: paper_exp1.anno.json
evaluation/HardCilk/simulations/paper_exp1/include/: task_pe.hpp  tasks.hpp  verilated.hpp
evaluation/HardCilk/simulations/paper_exp2/: generate_bulk.py  paper_exp2.json  run_exp.py
evaluation/HardCilk/simulations/paper_exp2/bulk/: factories.hpp
evaluation/HardCilk/simulations/paper_exp2/bulk/wrappers/: paper_exp2__peCount_8__vssNumber_6__vcasNumber_1__arsNumber_8.cpp
evaluation/HardCilk/simulations/paper_exp2/hdl/: paper_exp2.anno.json  paper_exp2.fir  paper_exp2.v
evaluation/HardCilk/simulations/paper_exp2/include/: task_pe.hpp  verilated.hpp
evaluation/HardCilk/simulations/paper_exp2/src/: main.cpp  processor.cpp  task_pe.cpp  verilated.cpp
evaluation/HardCilk/simulations/paper_exp3/: generate_bulk.py  run_exp.py
evaluation/HardCilk/simulations/paper_exp3/bulk/: factories.hpp
evaluation/HardCilk/simulations/paper_exp3/bulk/wrappers/: paper_exp3__peCount1_12__vssNumber1_2__peCount2_12__vssNumber2_2.hpp
evaluation/HardCilk/simulations/paper_exp3/include/: processor.hpp  task1_exp3_pe.hpp  verilated.hpp
evaluation/HardCilk/simulations/paper_exp3/src/: processor.cpp  task1_exp3_pe.cpp
evaluation/HardCilk/simulations/paper_exp_dae_0/bulk/: factories.cpp
evaluation/HardCilk/simulations/paper_exp_dae_0/bulk/wrappers/: paper_exp_dae_0__peCountExecute_2__vssNumberExecute_1.cpp  paper_exp_dae_0__peCountExecute_2__vssNumberExecute_1.hpp  paper_exp_dae_0__peCountExecute_4__vssNumberExecute_1.hpp  paper_exp_dae_0__peCountExecute_8__vssNumberExecute_1.cpp
evaluation/HardCilk/simulations/paper_exp_dae_0/include/: processor.hpp  tasks.hpp
evaluation/HardCilk/simulations/paper_exp_dae_0/src/: pe_execute.cpp  processor.cpp
evaluation/HardCilk/simulations/paper_exp_dae_1/: CMakeLists.txt  README.md  generate_bulk.py
evaluation/HardCilk/simulations/paper_exp_dae_1/bulk/: factories.hpp
evaluation/HardCilk/simulations/paper_exp_dae_1/bulk/wrappers/: paper_exp_dae_1__peCountAccess_1__vssNumberAccess_1__peCountExecute_4__vssNumberExecute_1.hpp  paper_exp_dae_1__peCountAccess_1__vssNumberAccess_1__peCountExecute_8__vssNumberExecute_1.hpp
evaluation/HardCilk/simulations/paper_exp_dae_1/include/: pe_access.hpp  pe_execute.hpp
evaluation/HardCilk/simulations/paper_exp_dae_1/src/: pe_access.cpp  processor.cpp
systemc_helpers/examples/HardCilk/: CMakeLists.txt  format_all.sh  test.cpp
systemc_helpers/examples/HardCilk/include/flexitask/: Abort.hpp  Allocator.hpp  ArgParser.hpp  Context.hpp  Defs.hpp  Desc.hpp  Factory.hpp  Graph.hpp  MemParams.hpp  MemoryInterface.hpp  Misc.hpp  PerfFigures.hpp  Processor.hpp  Top.hpp
systemc_helpers/examples/HardCilk/include/flexitask/hal/: VirtualContinuationAddressServer.hpp  VirtualStealServer.hpp
systemc_helpers/examples/HardCilk/include/hardcilk/: Context.hpp  Defs.hpp  Misc.hpp  Processor.hpp  Top.hpp
systemc_helpers/examples/HardCilk/include/hardcilk/hal/: VirtualContinuationAddressServer.hpp  VirtualStealServer.hpp
systemc_helpers/examples/HardCilk/include/sctlm/systemc_lib/: wire_splitter.hpp
systemc_helpers/examples/HardCilk/recyle_bin/: Untitled-1.py  create_wrappers.py  generate.sh
systemc_helpers/examples/HardCilk/recyle_bin/descriptors/: matmul.json  matmul.txt
systemc_helpers/examples/HardCilk/run_python/: simulation_paper_exp2  simulation_paper_exp3
systemc_helpers/examples/HardCilk/run_python/output/: out_simulation_paper_exp1_1024.txt  out_simulation_paper_exp1_128.txt  out_simulation_paper_exp1_16.txt  out_simulation_paper_exp1_256.txt  out_simulation_paper_exp1_512.txt  out_simulation_paper_exp2_1024.txt  out_simulation_paper_exp2_128.txt  out_simulation_paper_exp2_32.txt  out_simulation_paper_exp2_512.txt  out_simulation_paper_exp2_64.txt  out_simulation_paper_exp3_1024.txt  out_simulation_paper_exp3_128.txt  out_simulation_paper_exp3_64.txt
systemc_helpers/examples/HardCilk/simulations/: CMakeLists.txt  run_exp_all.py
systemc_helpers/examples/HardCilk/simulations/common/: generate_common.sh
systemc_helpers/examples/HardCilk/simulations/fibonacci/: CMakeLists.txt  fibonacci.json  generate.py  generate.sh  generate_bulk.py
systemc_helpers/examples/HardCilk/simulations/fibonacci/bulk/: factories.cpp  factories.hpp
systemc_helpers/examples/HardCilk/simulations/paper_exp1/: CMakeLists.txt  generate.sh  generate_bulk.py  paper_exp1.json  run_exp.py
systemc_helpers/examples/HardCilk/simulations/paper_exp2/: CMakeLists.txt  generate.sh  generate_bulk.py  run_exp.py
systemc_helpers/examples/HardCilk/simulations/paper_exp3/: CMakeLists.txt  generate.sh  generate_bulk.py  paper_exp3.json  run_exp.py
systemc_helpers/examples/HardCilk/simulations/paper_exp_dae_0/: CMakeLists.txt  README.md  generate_bulk.py  run_exp.py
systemc_helpers/examples/HardCilk/simulations/paper_exp_dae_1/: CMakeLists.txt  generate_bulk.py  run_exp.py
systemc_helpers/examples/HardCilk/simulations/plots/: dae.py
systemc_helpers/examples/HardCilk/src/flexitask/: Abort.cpp  Factory.cpp  MemParams.cpp  PerfFigures.cpp  Processor.cpp  Top.cpp
systemc_helpers/examples/HardCilk/src/hardcilk/: Abort.cpp  PerfFigures.cpp
systemc_helpers/examples/example_1/: CMakeLists.txt  SimpleMemoryMappedDevice.h  create_wrappers.py  main.cpp  tlm_enabled.h
systemc_helpers/examples/example_1/hdl/: SimpleMemoryMappedDevice.v
systemc_helpers/examples/example_2/: .devcontainer  CMakeLists.txt  DMA_Wrapped.h  create_wrappers.py  main.cpp  tlm_enabled.h
systemc_helpers/examples/example_2/hdl/: DMA_Wrapped.v
(+1684 files in other folders)
